[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/WinScene1.gd" type="Script" id=1]
[ext_resource path="res://images/flag.png" type="Texture" id=2]
[ext_resource path="res://images/flagpole.png" type="Texture" id=3]
[ext_resource path="res://images/castle.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "flag_slide"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Flag:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -318 ), Vector2( -40, 272 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anchor1:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.6, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -315 ), Vector2( -25, 268 ), Vector2( 83, 218 ), Vector2( 116, 375 ), Vector2( 456, 375 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.6, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "climb", "jump", "run", "idle" ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 116, 441 )

[node name="WinScene1" type="Node2D"]

script = ExtResource( 1 )
anchor_animation = "climb"

[node name="Flag" type="Sprite" parent="." index="0"]

position = Vector2( -40, -318 )
scale = Vector2( 5, 4.8 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="FlagPole" type="Sprite" parent="." index="1"]

scale = Vector2( 5, 4.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Castle" type="Sprite" parent="." index="2"]

position = Vector2( 477, 211 )
scale = Vector2( 5, 4.8 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="FlagPoleAnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/flag_slide = SubResource( 1 )
blend_times = [  ]

[node name="Anchor1" type="ColorRect" parent="." index="4"]

modulate = Color( 0.150391, 0.391927, 0.875, 0.762431 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -315.0
margin_right = 17.0
margin_bottom = -275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility" ]

[node name="FlagCollisionArea" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlagCollisionArea" index="0"]

position = Vector2( 96, -115 )
shape = SubResource( 2 )

[connection signal="body_entered" from="FlagCollisionArea" to="." method="_on_FlagCollisionArea_body_entered"]


